--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 				<ul class="social-btn">
-					<li class="list-heading">Proudly Developed by <a target="_blank" href="https://hynitr.com">Hynitr</a></li>
+					<li class="list-heading">Proudly Developed by 360 Communication Ltd</li>
 				</ul>
 				
 				
